# Tessrax

./: .colab_startup  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets-lint-ignore  2CONTRIBUTING.md  Business.txt  CHANGELOG.md  CONTRIBUTING.md  CSVREADME.md  Copy_of_Untitled0.ipynb  CoreModules.txt  Current_Resume.docx  DEFINITION_OF_DONE.md  ExecSecurity.txt  Final.txt  Git  Governance.txt  Job search.txt  LICENSE  Latest.txt  Ledger.txt  Makefile  Memory.txt  Path.txt  Protocols.txt  README.md  README2.md  README_CORE.md  README_ENTERPRISE.md  README_Moral_Systems_Engineering.md  README_PLUGINS_SECURITY.md  ROADMAP.md  Relationship.txt  Resume.txt  SECURITY.md  Scratchpad.txt  Skills.txt  (+33 more)
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: audit.yml  (+32 more)
.keys/: key1.json  key2.json  key3.json
ai_skills/: __init__.py
analysis/: IMPLEMENTATION_SUMMARY.md  README.md  requirements.txt  run_complete_pipeline.py  test_setup.py
analytics/: codex_merge_recovery_receipt.json  frienthropy_decay.py
api/: __init__.py
architecture/: ARCHITECTURAL_MAP_V1.json  CANONICALIZATION_PLAN_V1.json  CLASSIFICATION_SUMMARY_V1.md  STRUCTURAL_INTEGRITY_V1.md
audits/: premerge_integrity_v17_6.json
automation/: k8s_autoscaler.py  regenerate_lock.sh
config/: docker.json  k8s_autoscaler.yml
core/: __init__.py  contradiction_engine.py  governance_kernel.py  receipts.py  verify_ledger.py
dashboard/: README.md  api_routes.py  app.py  contradiction_stream.py  federation_map.py  ledger_viewer.py  pricing.py  truth_dashboard.py
docker/: Dockerfile  docker-compose.yml
docs/: CHANGELOG_TESSRAX_V20.md  COLD_AGENT_SPEC.md  CONSENSUS.md  TGP_SPEC.md  TRUTH_LOCK_README.md  architecture.md  architecture_overview.md  async_contradiction_detection.md  developer_guide.md  enterprise_migration.md  getting_started.md  governance_protocols.md  inevitability.md  metabolic_reconciliation.md  metrics_specification.md  redundancy_audit_summary.md  scar_ledger.md  tessrax_audit_preflight_v17_6.md  trust_os.md
examples/: __init__.py  dashboard_snapshot.py  governance_demo.py  minimal_detect.py  multi_agent_test.py
federation/: __init__.py  demo_federation.py  orchestrator.py
ledger/: README.md  __init__.py  append.py  federated_ledger.jsonl  federation_expansion_safepoint.jsonl  federation_orchestrator_ledger.jsonl  ledger.jsonl  license_ledger.jsonl  local.py  merkle.py  repairs.jsonl  reward_ledger.jsonl  tip_manifests.jsonl  verifier_integration_ledger.jsonl
metrics/: epistemic_health.py
ops/: airgap_replication.sh  alerts.yml  backup.sh  restore.sh
prometheus/: prometheus.yml
prototypes/: csv_sandbox.py
rfc/: RFC-0.md
sandbox/: __init__.py  ethical_drift.py
schemas/: epistemic_metrics.schema.json  tip.schema.json
scripts/: bootstrap_colab.sh  commit_truth_lock_v1.sh  generate_federation_consensus_receipt.py  generate_tgp_receipt.py  meta_chain_summary.py  package_release.py  repo_coherence_audit.py
sdk/: README.md  __init__.py  tessrax_client.py
server/: __init__.py  main.py
streamlit/: __main__.py
tessrax/: 10-23-25  Architecture.md  Code  Contradiction Density Matrix (CDM)  Engine.py  Everything  Hiring Reality Index (HRI) Scoring Schema  Latency–Entropy Governance Model.md  Security.md  Tessrax-Core Repository Package  Tessrax_Minimal_Protocol_TMP-1.md  __init__.py  __main__.py  agent_validation_harness.py  audit.py  automation_kit_plan.md  contradiction.py  dashboard.py  extraction.py  governance.py  governance_security.py  ledger.py  memory.py  plan.txt  reliability_harness.py  reporting.py  schema.py  selftest.py  tessrax_engine.py  tip.py  types.py  verify.py  verify_ledger.py
tessrax_truth_api/: __init__.py  config.yml  deployment.py  ledger_link.py  main.py  models.py  monetization_api.py  utils.py
tests/: __init__.py  conftest.py  test__collect_ai_skills.py  test_adversarial_predictive.py  test_ai_skills_lab_integration.py  test_async_contradiction_detector.py  test_cloud_logging.py  test_cold_agent.py  test_cold_agent_components.py  test_config_loader.py  test_consensus_liveness.py  test_consensus_safety.py  test_contradiction_engine.py  test_core_verify_ledger.py  test_dashboard_api.py  test_dashboard_launch.py  test_drift_visualizer.py  test_end_to_end.py  test_engine.py  test_env_snapshot.py  test_epistemic_metrics.py  test_ethical_drift.py  test_ethical_drift_engine.py  test_etl_public_health.py  test_evidence_loader.py  test_federation_demo.py  test_federation_map_load.py  test_federation_orchestrator.py  test_federation_resilience.py  test_governance_cycle.py  test_governance_kernel.py  test_governance_security.py  test_health_monitor.py  test_integration.py  test_integrity_monitor.py  test_k8s_autoscaler.py  test_kernel_integration.py  test_key_vault.py  test_key_vault_service.py  test_ledger.py  (+36 more)
tools/: compare_env_snapshot.py  generate_env_snapshot.py  precommit_python_version.py  repository_necessity_audit.py  secrets_lint.py  sync_guard.py
traefik/: traefik.yml
verifier/: __init__.py  service.py
(+427 files in other folders)
