[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessrax"
version = "0.1.0"
description = "Research-grade governance framework for contradiction metabolism"
authors = [
  { name = "Tessrax Contributors" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10,<3.12"
keywords = [
  "AI Governance",
  "Contradiction Metabolism",
  "Transparency",
  "Ledger",
  "Trust Framework",
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "PyJWT>=2.8",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "requests>=2.31",
  "starlette>=0.36",
  "redis>=5.0",
  "celery>=5.3",
  "stripe>=6.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.5",
]
ml = [
  "sentence-transformers>=2.2",
]

[tool.setuptools.packages.find]
include = ["tessrax", "tessrax.*"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.poetry.scripts]
tessrax-reconcile = "tessrax.metabolism.reconcile:main"
