[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessrax"
version = "0.1.0"
description = "Research-grade governance framework for contradiction metabolism"
authors = [
  { name = "Tessrax Contributors" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "AI Governance",
  "Contradiction Metabolism",
  "Transparency",
  "Ledger",
  "Trust Framework",
]
dependencies = [
  "fastapi>=0.110.0",
  "pandas>=2.0",
  "Pillow>=9.5.0",
  "pynacl>=1.5.0",
  "boto3>=1.28",
  "uvicorn>=0.30",
  "jsonschema>=4.25",
  "matplotlib>=3.8",
  "requests>=2.31",
  "streamlit>=1.32",
]

[project.scripts]
ai-skills = "ai_skills.prompting.cli:main"
tessrax-selftest = "tessrax.selftest:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
  "tessrax",
  "tessrax.*",
  "ai_skills",
  "ai_skills.*",
  "tessrax_truth_api",
  "tessrax_truth_api.*",
]

[tool.setuptools.package-data]
"ai_skills.prompting" = ["templates/*.txt"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.poetry.scripts]
tessrax-reconcile = "tessrax.metabolism.reconcile:main"
