[metadata]
name = tessrax
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    numpy>=1.24
    pandas>=2.0
    fastapi>=0.110.0
    networkx>=3.2
    pynacl>=1.5.0

[options.extras_require]
dev =

[options.package_data]
* = *.yml, *.yaml
