[metadata]
name = tessrax
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    fastapi>=0.110.0
    pandas>=2.0
    Pillow>=9.5.0
    pynacl>=1.5.0
    boto3>=1.28
    uvicorn>=0.30
    jsonschema>=4.25

[options.extras_require]
dev =

[options.package_data]
* = *.yml, *.yaml
