[metadata]
name = tessrax
version = 0.1.0

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    fastapi>=0.110.0
    pandas>=2.0
    Pillow>=9.5.0
    pynacl>=1.5.0
    boto3>=1.28
    uvicorn>=0.30
    jsonschema>=4.25
    matplotlib>=3.8
    requests>=2.31
    streamlit>=1.32
    tessrax>=17.8.0

[options.extras_require]
dev =

[options.package_data]
* = *.yml, *.yaml
